--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,21 @@
 body{
-    color: deeppink;
-    text-align: center;
+    color: black;
+    text-align: left;
     font-family: arial;
+    font-size: 10px;
+    margin: 0;
+    padding: 0;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align:left;
+    border: 1px solid #000;
+    margin: 0 auto;
+}
+
+#continer h1{
+    font-size: 20px;
 }
